fixed intial flicker

--- a/modus/src/components/Footer.css
+++ b/modus/src/components/Footer.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column; 
     min-height: 120px; 
-    height: auto; 
+    height: 145px; 
     position: fixed;
     bottom: 0; 
     left: 0;
